--- a/assets/i18n/zh-Hant.json
+++ b/assets/i18n/zh-Hant.json
@@ -53,6 +53,7 @@
             "grok": "07.課堂練習2 - Grok",
             "perplexity": "07.課堂練習2 - Perplexity"
         },
+        "hw100219359": "08.課堂作業",
         "hwp24": "`text-decoration` 混合樣式",
         "hwp27": "`text-shadow` 基本用法",
         "hwp28": "`text-shadow` 多重效果",
