--- a/assets/i18n/zh-Hant.json
+++ b/assets/i18n/zh-Hant.json
@@ -21,6 +21,7 @@
         "home": "首頁",
         "about": "關於我",
         "projects": "作品集",
+        "project_detail": "作品詳情",
         "hw": "作業",
         "htmlcafe": "打造第一個網頁",
         "htmlcafe02": "2.段落",
@@ -30,7 +31,8 @@
         "hw100218340": "增加網頁顯示技術",
         "hw100218476": "表格練習",
         "hw100219151": "課堂練習2",
-        "hw100219359": "課堂作業"
+        "hw100219359": "課堂作業",
+        "100219151_perplexity": "Perplexity"
     },
     "pages": {
         "home_title": "應用程式首頁",
