feat: Add project detail pages, various homework sections, and internationalization support with new images and data.

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -9,18 +9,47 @@
         "english": "English"
     },
     "theme": {
-        "color_theme": "顏色主題：",
-        "theme_mode": "主題模式：",
-        "default": "預設",
-        "orange": "橘色",
-        "blue": "藍色",
-        "green": "綠色",
-        "red": "紅色"
+        "color_theme": "Color Theme:",
+        "theme_mode": "Theme Mode:",
+        "default": "Default",
+        "orange": "Orange",
+        "blue": "Blue",
+        "green": "Green",
+        "red": "Red"
     },
     "menu": {
         "home": "Home",
         "about": "About",
-        "hw": "HW"
+        "projects": "Projects",
+        "project_detail": "Project Detail",
+        "hw": "Homework",
+        "htmlcafe": "Build First Webpage",
+        "htmlcafe02": "2. Paragraphs",
+        "htmlcafe03": "3. Text Formatting",
+        "htmlcafe04": "4. Lists",
+        "htmlcafe05": "5. Images",
+        "hw100218340": "Web Display Tech",
+        "100218340": "Web Display Tech",
+        "100218340p24": "`text-decoration` Mixed Style",
+        "100218340p27": "`text-shadow` Basic Usage",
+        "100218340p28": "`text-shadow` Multiple Effects",
+        "hw100218476": "Table Practice",
+        "100218476": "Table Practice",
+        "hw100219151": "Class Exercise 2",
+        "100219151": "Class Exercise 2",
+        "100219151_chatgpt": "ChatGPT",
+        "100219151_gemini": "Gemini",
+        "100219151_grok": "Grok",
+        "100219151_perplexity": "Perplexity",
+        "hw100219359": "Class Homework",
+        "100219359": "Class Homework",
+        "100219151_perplexity": "Perplexity",
+        "100220208": "Homework 100220208",
+        "100220477": "Homework 100220477",
+        "100220477_panorama": "Panorama",
+        "100220477_googleearthstudio": "Google Earth Studio",
+        "100220929": "Homework 100220929",
+        "100220930": "Homework 100220930"
     },
     "pages": {
         "home_title": "Home",
@@ -33,38 +62,55 @@
     "home": {},
     "about": {},
     "Projects": {
-        "title": "作品集",
-        "description": "以下是我參與過的一些專案："
+        "title": "Projects",
+        "description": "Here are some projects I have participated in:"
     },
     "HW": {
-        "second": "02.打造第一個網頁",
-        "third": "03.網域名稱與服務內容",
-        "fourth": "04.增加網頁顯示技術",
-        "fifth": "05.表格練習",
+        "second": "02. Build First Webpage",
+        "third": "03. Domain & Services",
+        "fourth": "04. Web Display Tech",
+        "fifth": "05. Table Practice",
         "sixth": "06."
     },
     "pageTitle": {
         "home": "Home {pipe} James Hsu",
-        "about": "About me {pipe} James Hsu",
+        "about": "About Me {pipe} James Hsu",
         "hw": "Homework {pipe} James Hsu",
-        "projects": "作品集 {pipe} James Hsu",
-        "hwhtmlcafe02": "2.段落",
-        "hwhtmlcafe03": "3.文字處理",
-        "hwhtmlcafe04": "4.清單",
-        "hwhtmlcafe05": "5.圖片",
-        "hw100218340": "04.增加網頁顯示技術",
-        "hw100218476": "05.表格練習",
+        "projects": "Projects {pipe} James Hsu",
+        "hwhtmlcafe": "Build First Webpage",
+        "hwhtmlcafe02": "2. Paragraphs",
+        "hwhtmlcafe03": "3. Text Formatting",
+        "hwhtmlcafe04": "4. Lists",
+        "hwhtmlcafe05": "5. Images",
+        "100218340": "04. Web Display Tech",
+        "pageTitle.100218340": "04. Web Display Tech",
+        "100218340p24": "`text-decoration` Mixed Style",
+        "100218340p27": "`text-shadow` Basic Usage",
+        "100218340p28": "`text-shadow` Multiple Effects",
+        "hw100218476": "05. Table Practice",
+        "100218476": "05. Table Practice",
         "hw100219151": {
-            "index": "07.課堂練習2",
-            "chatgpt": "07.課堂練習2 - ChatGPT",
-            "gemini": "07.課堂練習2 - Gemini",
-            "grok": "07.課堂練習2 - Grok",
-            "perplexity": "07.課堂練習2 - Perplexity"
+            "index": "07. Class Exercise 2",
+            "chatgpt": "07. Class Exercise 2 - ChatGPT",
+            "gemini": "07. Class Exercise 2 - Gemini",
+            "grok": "07. Class Exercise 2 - Grok",
+            "perplexity": "07. Class Exercise 2 - Perplexity"
         },
-        "hw100219359": "08.課堂作業",
-        "hw100219359p24": "`text-decoration` 混合樣式",
-        "hw100219359p27": "`text-shadow` 基本用法",
-        "hw100219359p28": "`text-shadow` 多重效果",
-        "fallback": "Error {pipe} James Hsu"
+        "100219151": "07. Class Exercise 2",
+        "100219151_chatGPT": "07. Class Exercise 2 - ChatGPT",
+        "100219151_gemini": "07. Class Exercise 2 - Gemini",
+        "100219151_grok": "07. Class Exercise 2 - Grok",
+        "100219151_perplexity": "07. Class Exercise 2 - Perplexity",
+        "hw100219359": "08. Class Homework",
+        "hw100219359p24": "`text-decoration` Mixed Style",
+        "hw100219359p27": "`text-shadow` Basic Usage",
+        "hw100219359p28": "`text-shadow` Multiple Effects",
+        "hw100220208": "Homework 100220208",
+        "hw100220477": "Homework 100220477",
+        "100220477_panorama": "Panorama",
+        "100220477_googleEarthStudio": "Google Earth Studio",
+        "hw100220929": "Homework 100220929",
+        "hw100220930": "Homework 100220930",
+        "fallback": "Page Not Found"
     }
 }
