--- a/assets/i18n/zh-Hant.json
+++ b/assets/i18n/zh-Hant.json
@@ -29,10 +29,27 @@
         "htmlcafe04": "4.清單",
         "htmlcafe05": "5.圖片",
         "hw100218340": "增加網頁顯示技術",
+        "100218340": "增加網頁顯示技術",
+        "100218340p24": "`text-decoration` 混合樣式",
+        "100218340p27": "`text-shadow` 基本用法",
+        "100218340p28": "`text-shadow` 多重效果",
         "hw100218476": "表格練習",
+        "100218476": "表格練習",
         "hw100219151": "課堂練習2",
+        "100219151": "課堂練習2",
+        "100219151_chatgpt": "ChatGPT",
+        "100219151_gemini": "Gemini",
+        "100219151_grok": "Grok",
+        "100219151_perplexity": "Perplexity",
         "hw100219359": "課堂作業",
-        "100219151_perplexity": "Perplexity"
+        "100219359": "課堂作業",
+        "100219151_perplexity": "Perplexity",
+        "100220208": "作業 100220208",
+        "100220477": "作業 100220477",
+        "100220477_panorama": "全景圖",
+        "100220477_googleearthstudio": "Google Earth Studio",
+        "100220929": "作業 100220929",
+        "100220930": "作業 100220930"
     },
     "pages": {
         "home_title": "應用程式首頁",
@@ -66,10 +83,12 @@
         "hwhtmlcafe04": "4.清單",
         "hwhtmlcafe05": "5.圖片",
         "100218340": "04.增加網頁顯示技術",
+        "pageTitle.100218340": "04.增加網頁顯示技術",
         "100218340p24": "`text-decoration` 混合樣式",
         "100218340p27": "`text-shadow` 基本用法",
         "100218340p28": "`text-shadow` 多重效果",
         "hw100218476": "05.表格練習",
+        "100218476": "05.表格練習",
         "hw100219151": {
             "index": "07.課堂練習2",
             "chatgpt": "07.課堂練習2 - ChatGPT",
@@ -77,7 +96,21 @@
             "grok": "07.課堂練習2 - Grok",
             "perplexity": "07.課堂練習2 - Perplexity"
         },
+        "100219151": "07.課堂練習2",
+        "100219151_chatGPT": "07.課堂練習2 - ChatGPT",
+        "100219151_gemini": "07.課堂練習2 - Gemini",
+        "100219151_grok": "07.課堂練習2 - Grok",
+        "100219151_perplexity": "07.課堂練習2 - Perplexity",
         "hw100219359": "08.課堂作業",
+        "hw100219359p24": "`text-decoration` 混合樣式",
+        "hw100219359p27": "`text-shadow` 基本用法",
+        "hw100219359p28": "`text-shadow` 多重效果",
+        "hw100220208": "作業 100220208",
+        "hw100220477": "作業 100220477",
+        "100220477_panorama": "全景圖",
+        "100220477_googleEarthStudio": "Google Earth Studio",
+        "hw100220929": "作業 100220929",
+        "hw100220930": "作業 100220930",
         "fallback": "找不到頁面"
     }
 }
