feat: Add initial pages (home, about, projects, project detail, error), contact form, and i18n data for resume site.

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -43,7 +43,6 @@
         "100219151_perplexity": "Perplexity",
         "hw100219359": "Class Homework",
         "100219359": "Class Homework",
-        "100219151_perplexity": "Perplexity",
         "100220208": "Homework 100220208",
         "100220477": "Homework 100220477",
         "100220477_panorama": "Panorama",
@@ -59,11 +58,110 @@
         "homework_title": "Homework",
         "homework_content": "Homework content"
     },
-    "home": {},
-    "about": {},
+    "home": {
+        "greeting": "Hello, I am",
+        "role": "Possessing cross-domain technical and management capabilities, <br>committed to building efficient and user-friendly applications.",
+        "about_title": "About Me",
+        "about_summary": "I have over 2 years of practical development experience in Web3 frontend and backend web applications, with triple practical experience as a frontend engineer, project manager, and MIS. I have worked at Mass Technology and Zhe Yu Technology. Successfully transitioning from a military and US study background, I am proficient in HTML, CSS, JavaScript, and mainstream frameworks such as Angular, Vue3, and React.<br>I transform the discipline and execution ability cultivated in the past into workplace advantages, specializing in cross-domain communication and problem-solving. This cross-domain journey proves that I have high adaptability and enthusiasm for learning, and can create maximum value for projects with a comprehensive perspective of 'technology + management'.",
+        "more_about": "More About Me",
+        "featured_projects": "Featured Projects",
+        "read_more": "Read More",
+        "more_projects": "More Projects"
+    },
+    "about": {
+        "greeting": "Hi. I am <br /> James Hsu.",
+        "status": "~ Open for Opportunities ~",
+        "intro_title": "Self Introduction",
+        "intro_content": "Hello, I am James Hsu. I am a software engineer with 2 years of practical development experience in Web3 related applications. I am currently studying at National Chin-Yi University of Technology in Taichung, continuing to learn the latest technology trends. I have participated in the development and maintenance of more than 20 projects, giving me a deep understanding of the product life cycle. I am particularly passionate about the design aspect because I believe that good technology must be paired with good user experience to exert maximum value. I look forward to bringing these experiences to your company.",
+        "education_title": "Education",
+        "education_list": [
+            "Chang Yi Senior High School (Graduated)",
+            "South Seattle College (Attended)",
+            "National Chin-Yi University of Technology (Studying)"
+        ],
+        "work_title": "Work Experience",
+        "work_list": [
+            "Professional Soldier",
+            "Mass Technology Co., Ltd.",
+            "Zhe Yu Technology Co., Ltd."
+        ],
+        "skills_title": "Skills",
+        "exp_title": "Professional Experience",
+        "exp_content": "💻 Professional History and Background<br>I have dual experience as a Project Manager (PM) and Frontend Engineer in the software technology industry, having worked at Mass Technology Co., Ltd. and Zhe Yu Technology Co., Ltd. Before entering the technology field, my career started uniquely. I served in the military for four years, mainly responsible for logistics and supply work. This experience cultivated my emphasis on discipline, planning, and execution efficiency. After retiring, I went to South Seattle College in the United States for one year of further study, and then returned to Taiwan due to family reasons.<br><br>🚀 Career Transition and Skill Development<br>After returning to Taiwan, with a strong interest in programming, I decided to turn to software development. I first learned frontend basic technologies such as HTML and CSS through the vocational training center system and successfully obtained the Level C technician for frontend web design. After completing the training, knowing that the software industry is developing rapidly, I continued to invest time in self-learning JavaScript to meet the needs of the modern workplace. During my time as a frontend engineer at Mass Technology and Zhe Yu Technology, I participated in various projects and proficiently mastered the development and application of multiple mainstream frameworks, including Angular, Vue, and React. This experience not only accumulated solid technical strength but also gave me a comprehensive perspective from project planning to actual program development.<br><br>🌟 Cross-domain Experience<br>Early service industry experience (catering, retail) and military logistics background gave me excellent communication and coordination skills, problem-solving skills, and attention to detail. These qualities became my key advantages for efficient cooperation with the team when serving as a project manager and cross-departmental cooperation. My career transition proves that I have strong motivation to learn, the ability to adapt to rapid changes, and can transform past seemingly unrelated experiences into professional value in the software development field.",
+        "portfolio_title": "Portfolio & Project Experience",
+        "projects_list": {
+            "artisan": "Artisan Tour",
+            "giant": "Giant Tour",
+            "luxe": "Luxe Travel",
+            "tourm": "TourM",
+            "ncl": "NCL Center for Chinese Studies",
+            "metro": "Taipei Metro Data Platform",
+            "cdic": "Central Deposit Insurance Corporation",
+            "landbank": "Land Bank Securities Finance",
+            "park": "New Taipei Metropolitan Park",
+            "scbooks": "Sun Ding Digital Publishing"
+        }
+    },
     "Projects": {
         "title": "Projects",
-        "description": "Here are some projects I have participated in:"
+        "description": "Here are some projects I have participated in:",
+        "view_detail": "View Details",
+        "more_coming": "More projects coming soon..."
+    },
+    "ProjectDetail": {
+        "loading": "Loading...",
+        "error_not_found": "Project not found",
+        "error_load": "Error loading data",
+        "back_list": "Back to List",
+        "back_projects": "Back to Projects",
+        "intro": "Project Introduction",
+        "tech": "Technologies: ",
+        "link": "Project Link: ",
+        "none": "N/A",
+        "github": "GitHub: ",
+        "info": "Project Info"
+    },
+    "Error": {
+        "title": "404 - Page Not Found",
+        "description": "The page you are looking for does not exist, please",
+        "back_home": "Back to Home"
+    },
+    "Contact": {
+        "title": "Contact Me",
+        "name": "Name",
+        "name_placeholder": "Your Name",
+        "gender": "Title",
+        "optional": "(Optional)",
+        "male": "Mr.",
+        "female": "Ms.",
+        "email": "Email",
+        "email_placeholder": "Your Email",
+        "phone": "Phone/Mobile",
+        "phone_placeholder": "Your Phone or Mobile",
+        "time": "Convenient Time",
+        "time_hint": "(Optional, Multiple)",
+        "weekday": "Weekday",
+        "weekend": "Weekend",
+        "select_weekday": "Select Weekday Time",
+        "select_weekend": "Select Weekend Time",
+        "message": "Message",
+        "message_placeholder": "Your Message...",
+        "captcha": "Captcha",
+        "captcha_placeholder": "Enter Captcha",
+        "refresh_captcha": "Click to refresh",
+        "refresh_tooltip": "Refresh Captcha",
+        "submit": "Send Message",
+        "submitting": "Sending...",
+        "anytime": "Anytime",
+        "invalid_captcha": "Invalid Captcha, please try again.",
+        "sending": "Sending message, please wait...",
+        "success": "Message sent successfully! I will reply to you soon.",
+        "fail": "Failed to send, please check your network connection or try again later.",
+        "unselected": "Unselected",
+        "unspecified_time": "Unspecified Time",
+        "unspecified": "Unspecified",
+        "weekday_prefix": "Weekday: ",
+        "weekend_prefix": "Weekend: "
     },
     "HW": {
         "second": "02. Build First Webpage",
