--- a/assets/i18n/zh-Hant.json
+++ b/assets/i18n/zh-Hant.json
@@ -43,7 +43,6 @@
         "100219151_perplexity": "Perplexity",
         "hw100219359": "課堂作業",
         "100219359": "課堂作業",
-        "100219151_perplexity": "Perplexity",
         "100220208": "作業 100220208",
         "100220477": "作業 100220477",
         "100220477_panorama": "全景圖",
@@ -59,11 +58,110 @@
         "homework_title": "作業",
         "homework_content": "這是作業區頁面。"
     },
-    "home": {},
-    "about": {},
+    "home": {
+        "greeting": "你好, 我是",
+        "role": "具備跨領域的技術與管理能力，<br>致力於打造高效且貼近使用者的應用程式。",
+        "about_title": "關於我",
+        "about_summary": "我擁有2年多的Web3前後端相關網頁應用的實務開發經驗，具備前端工程師、專案管理師與MIS三重實務經驗，曾任職於麥斯科技與哲煜科技。自軍旅與美國進修背景成功轉職，精通HTML、CSS、JavaScript及Angular、Vue3、React等主流框架。<br>我將過往培養的紀律與執行力轉化為職場優勢，擅長跨領域溝通與問題解決。這段跨領域歷程證明我具備高度適應力與學習熱忱，能以「技術＋管理」的全面視角，為專案創造最大價值。",
+        "more_about": "更多關於我",
+        "featured_projects": "精選．作品集",
+        "read_more": "了解更多",
+        "more_projects": "更多作品集"
+    },
+    "about": {
+        "greeting": "Hi. I am <br /> James Hsu.",
+        "status": "~ 全職接案中 ~",
+        "intro_title": "自我簡介",
+        "intro_content": "您好，我是許家瑜。我是一位軟體工程師，擁有 2 年 Web3 相關應用的實戰開發經驗。我目前在臺中國立勤益科技大學進修，持續學習最新的技術趨勢。過去我曾參與過 20 多項專案的開發與維護，讓我對產品的生命週期有深入理解。我特別熱衷於設計環節，因為我相信好的技術必須搭配好的用戶體驗才能發揮最大價值。我很期待將這些經驗帶入貴公司。",
+        "education_title": "學歷",
+        "education_list": [
+            "長億高級中學(畢業)",
+            "南西雅圖學院(肄業)",
+            "國立勤益科技大學(就學中)"
+        ],
+        "work_title": "工作經歷",
+        "work_list": [
+            "職業軍人",
+            "麥斯科技有限公司",
+            "哲煜科技股份有限公司"
+        ],
+        "skills_title": "專長",
+        "exp_title": "工作經驗",
+        "exp_content": "💻 專業歷程與背景 我具備在軟體科技業擔任專案經理（PM） 與 前端工程師的雙重經驗，曾在麥斯科技有限公司和哲煜科技股份有限公司任職。在進入科技領域之前，我的職涯起點較為特別。我曾在軍隊服役四年，主要負責後勤補給工作，這段經歷培養了我對紀律、規劃與執行效率的重視。退伍後，我前往美國南西雅圖學院進修一年，後因家庭因素返國。<br><br>🚀 轉職與技能發展 回國後，我憑藉著對程式設計的濃厚興趣，下定決心轉向軟體開發。我先透過職訓中心系統學習了 HTML、CSS等前端基礎技術，並成功考取了前端網頁設計丙級證照。結訓後，深知軟體產業發展迅速，我持續投入時間自學JavaScript，以滿足現代職場的需求。在麥斯科技與哲煜科技擔任前端工程師期間，我透過參與各種專案，熟練掌握了多種主流框架的開發與應用，包括Angular、Vue 和React。這段經歷不僅累積了紮實的技術實力，也使我具備從專案規劃到實際程式開發的全面視角。<br><br>🌟 跨領域經驗 早期的服務業經驗（餐飲、零售）與軍隊的後勤背景，賦予了我優秀的溝通協調能力、問題解決能力以及對細節的專注力，這些特質在擔任專案經理和跨部門合作時，成為我與團隊高效合作的關鍵優勢。我的職涯轉變證明了我具備強烈的學習動力、適應快速變化的能力，並能將過去看似不相關的經驗轉化為軟體開發領域的專業價值。",
+        "portfolio_title": "作品集 & 專案經驗",
+        "projects_list": {
+            "artisan": "巨匠旅遊",
+            "giant": "巨大旅遊",
+            "luxe": "典藏旅遊",
+            "tourm": "旅市假期",
+            "ncl": "國家圖書館 漢學研究中心",
+            "metro": "臺北捷運運量數據管理平台",
+            "cdic": "中央存款保險股份有限公司",
+            "landbank": "土地銀行證券財經資訊網站",
+            "park": "新北大都會公園",
+            "scbooks": "商鼎數位出版"
+        }
+    },
     "Projects": {
         "title": "作品集",
-        "description": "以下是我參與過的一些專案："
+        "description": "以下是我參與過的一些專案：",
+        "view_detail": "查看詳情",
+        "more_coming": "還有更多作品持續上架中..."
+    },
+    "ProjectDetail": {
+        "loading": "載入中...",
+        "error_not_found": "找不到該專案資料",
+        "error_load": "讀取資料發生錯誤",
+        "back_list": "返回列表",
+        "back_projects": "返回作品集",
+        "intro": "專案介紹",
+        "tech": "主要技術：",
+        "link": "專案連結：",
+        "none": "暫無提供",
+        "github": "GitHub：",
+        "info": "專案資訊"
+    },
+    "Error": {
+        "title": "404 - 找不到頁面",
+        "description": "您要找的頁面不存在，請",
+        "back_home": "回首頁"
+    },
+    "Contact": {
+        "title": "聯絡我",
+        "name": "姓名",
+        "name_placeholder": "您的名字",
+        "gender": "稱謂",
+        "optional": "(選填)",
+        "male": "先生",
+        "female": "女士",
+        "email": "Email",
+        "email_placeholder": "您的 Email",
+        "phone": "電話/手機號碼",
+        "phone_placeholder": "您的電話或手機號碼擇一",
+        "time": "方便聯絡時間",
+        "time_hint": "(選填、可複選)",
+        "weekday": "平日",
+        "weekend": "週末",
+        "select_weekday": "請選擇平日時段",
+        "select_weekend": "請選擇週末時段",
+        "message": "訊息",
+        "message_placeholder": "想說的話...",
+        "captcha": "驗證碼",
+        "captcha_placeholder": "請輸入驗證碼",
+        "refresh_captcha": "點擊刷新驗證碼",
+        "refresh_tooltip": "刷新驗證碼",
+        "submit": "送出訊息",
+        "submitting": "傳送中...",
+        "anytime": "隨時皆可",
+        "invalid_captcha": "驗證碼錯誤，請重新輸入。",
+        "sending": "正在傳送訊息，請稍候...",
+        "success": "發送成功！我會盡快回覆您。",
+        "fail": "發送失敗，請檢查網路連線或稍後再試。",
+        "unselected": "未選擇",
+        "unspecified_time": "未指定時段",
+        "unspecified": "未指定",
+        "weekday_prefix": "平日: ",
+        "weekend_prefix": "週末: "
     },
     "HW": {
         "second": "02.打造第一個網頁",
